--- a/result/2022-01-21.md
+++ b/result/2022-01-21.md
@@ -10,22 +10,22 @@
 10. [王多多 鼓鼓](https://s.weibo.com//weibo?q=%E7%8E%8B%E5%A4%9A%E5%A4%9A%20%E9%BC%93%E9%BC%93&Refer=top) 578569
 11. [靠谱恋人摩羯座](https://s.weibo.com//weibo?q=%E9%9D%A0%E8%B0%B1%E6%81%8B%E4%BA%BA%E6%91%A9%E7%BE%AF%E5%BA%A7&Refer=top) 562484
 12. [陕西省妇联强烈谴责家暴事件](https://s.weibo.com//weibo?q=%23%E9%99%95%E8%A5%BF%E7%9C%81%E5%A6%87%E8%81%94%E5%BC%BA%E7%83%88%E8%B0%B4%E8%B4%A3%E5%AE%B6%E6%9A%B4%E4%BA%8B%E4%BB%B6%23&Refer=top) 488738
-13. [老外算是把火锅吃明白了](https://s.weibo.com//weibo?q=%23%E8%80%81%E5%A4%96%E7%AE%97%E6%98%AF%E6%8A%8A%E7%81%AB%E9%94%85%E5%90%83%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 454945
-14. [闪耀暖暖](https://s.weibo.com//weibo?q=%E9%97%AA%E8%80%80%E6%9A%96%E6%9A%96&Refer=top) 415378
-15. [河南省生殖医院致歉](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E7%9C%81%E7%94%9F%E6%AE%96%E5%8C%BB%E9%99%A2%E8%87%B4%E6%AD%89%23&Refer=top) 411323
-16. [LV秋冬22男装秀](https://s.weibo.com//weibo?q=LV%E7%A7%8B%E5%86%AC22%E7%94%B7%E8%A3%85%E7%A7%80&Refer=top) 376452
-17. [富豪建议用人造子宫代替女性生孩子](https://s.weibo.com//weibo?q=%23%E5%AF%8C%E8%B1%AA%E5%BB%BA%E8%AE%AE%E7%94%A8%E4%BA%BA%E9%80%A0%E5%AD%90%E5%AE%AB%E4%BB%A3%E6%9B%BF%E5%A5%B3%E6%80%A7%E7%94%9F%E5%AD%A9%E5%AD%90%23&Refer=top) 372068
-18. [全知干将全部删除宋智雅镜头](https://s.weibo.com//weibo?q=%23%E5%85%A8%E7%9F%A5%E5%B9%B2%E5%B0%86%E5%85%A8%E9%83%A8%E5%88%A0%E9%99%A4%E5%AE%8B%E6%99%BA%E9%9B%85%E9%95%9C%E5%A4%B4%23&Refer=top) 313132
-19. [王鹏飞](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E9%B9%8F%E9%A3%9E%23&Refer=top) 304261
-20. [潜在家暴者的13个特征](https://s.weibo.com//weibo?q=%23%E6%BD%9C%E5%9C%A8%E5%AE%B6%E6%9A%B4%E8%80%85%E7%9A%8413%E4%B8%AA%E7%89%B9%E5%BE%81%23&Refer=top) 294876
-21. [河南 防疫措施](https://s.weibo.com//weibo?q=%E6%B2%B3%E5%8D%97%20%E9%98%B2%E7%96%AB%E6%8E%AA%E6%96%BD&Refer=top) 289955
-22. [张艺谋说希望开幕式不超过100分钟](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E8%89%BA%E8%B0%8B%E8%AF%B4%E5%B8%8C%E6%9C%9B%E5%BC%80%E5%B9%95%E5%BC%8F%E4%B8%8D%E8%B6%85%E8%BF%87100%E5%88%86%E9%92%9F%23&Refer=top) 276962
-23. [金钱豹发型](https://s.weibo.com//weibo?q=%23%E9%87%91%E9%92%B1%E8%B1%B9%E5%8F%91%E5%9E%8B%23&Refer=top) 268296
-24. [白敬亭回复粉丝爱你们](https://s.weibo.com//weibo?q=%23%E7%99%BD%E6%95%AC%E4%BA%AD%E5%9B%9E%E5%A4%8D%E7%B2%89%E4%B8%9D%E7%88%B1%E4%BD%A0%E4%BB%AC%23&Refer=top) 266230
-25. [张若昀说两袖青蛇练习中](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E8%8B%A5%E6%98%80%E8%AF%B4%E4%B8%A4%E8%A2%96%E9%9D%92%E8%9B%87%E7%BB%83%E4%B9%A0%E4%B8%AD%23&Refer=top) 258263
-26. [养只小煤球是什么体验](https://s.weibo.com//weibo?q=%23%E5%85%BB%E5%8F%AA%E5%B0%8F%E7%85%A4%E7%90%83%E6%98%AF%E4%BB%80%E4%B9%88%E4%BD%93%E9%AA%8C%23&Refer=top) 246752
-27. [刘宇宁直播](https://s.weibo.com//weibo?q=%23%E5%88%98%E5%AE%87%E5%AE%81%E7%9B%B4%E6%92%AD%23&Refer=top) 243963
-28. [Uzi BLG](https://s.weibo.com//weibo?q=Uzi%20BLG&Refer=top) 241644
+13. [Uzi BLG](https://s.weibo.com//weibo?q=Uzi%20BLG&Refer=top) 459138
+14. [老外算是把火锅吃明白了](https://s.weibo.com//weibo?q=%23%E8%80%81%E5%A4%96%E7%AE%97%E6%98%AF%E6%8A%8A%E7%81%AB%E9%94%85%E5%90%83%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 454945
+15. [闪耀暖暖](https://s.weibo.com//weibo?q=%E9%97%AA%E8%80%80%E6%9A%96%E6%9A%96&Refer=top) 415378
+16. [河南省生殖医院致歉](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E7%9C%81%E7%94%9F%E6%AE%96%E5%8C%BB%E9%99%A2%E8%87%B4%E6%AD%89%23&Refer=top) 411323
+17. [LV秋冬22男装秀](https://s.weibo.com//weibo?q=LV%E7%A7%8B%E5%86%AC22%E7%94%B7%E8%A3%85%E7%A7%80&Refer=top) 376452
+18. [富豪建议用人造子宫代替女性生孩子](https://s.weibo.com//weibo?q=%23%E5%AF%8C%E8%B1%AA%E5%BB%BA%E8%AE%AE%E7%94%A8%E4%BA%BA%E9%80%A0%E5%AD%90%E5%AE%AB%E4%BB%A3%E6%9B%BF%E5%A5%B3%E6%80%A7%E7%94%9F%E5%AD%A9%E5%AD%90%23&Refer=top) 372068
+19. [养只小煤球是什么体验](https://s.weibo.com//weibo?q=%23%E5%85%BB%E5%8F%AA%E5%B0%8F%E7%85%A4%E7%90%83%E6%98%AF%E4%BB%80%E4%B9%88%E4%BD%93%E9%AA%8C%23&Refer=top) 336275
+20. [全知干将全部删除宋智雅镜头](https://s.weibo.com//weibo?q=%23%E5%85%A8%E7%9F%A5%E5%B9%B2%E5%B0%86%E5%85%A8%E9%83%A8%E5%88%A0%E9%99%A4%E5%AE%8B%E6%99%BA%E9%9B%85%E9%95%9C%E5%A4%B4%23&Refer=top) 313132
+21. [王鹏飞](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E9%B9%8F%E9%A3%9E%23&Refer=top) 304261
+22. [潜在家暴者的13个特征](https://s.weibo.com//weibo?q=%23%E6%BD%9C%E5%9C%A8%E5%AE%B6%E6%9A%B4%E8%80%85%E7%9A%8413%E4%B8%AA%E7%89%B9%E5%BE%81%23&Refer=top) 294876
+23. [河南 防疫措施](https://s.weibo.com//weibo?q=%E6%B2%B3%E5%8D%97%20%E9%98%B2%E7%96%AB%E6%8E%AA%E6%96%BD&Refer=top) 289955
+24. [张艺谋说希望开幕式不超过100分钟](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E8%89%BA%E8%B0%8B%E8%AF%B4%E5%B8%8C%E6%9C%9B%E5%BC%80%E5%B9%95%E5%BC%8F%E4%B8%8D%E8%B6%85%E8%BF%87100%E5%88%86%E9%92%9F%23&Refer=top) 276962
+25. [金钱豹发型](https://s.weibo.com//weibo?q=%23%E9%87%91%E9%92%B1%E8%B1%B9%E5%8F%91%E5%9E%8B%23&Refer=top) 268296
+26. [白敬亭回复粉丝爱你们](https://s.weibo.com//weibo?q=%23%E7%99%BD%E6%95%AC%E4%BA%AD%E5%9B%9E%E5%A4%8D%E7%B2%89%E4%B8%9D%E7%88%B1%E4%BD%A0%E4%BB%AC%23&Refer=top) 266230
+27. [张若昀说两袖青蛇练习中](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E8%8B%A5%E6%98%80%E8%AF%B4%E4%B8%A4%E8%A2%96%E9%9D%92%E8%9B%87%E7%BB%83%E4%B9%A0%E4%B8%AD%23&Refer=top) 258263
+28. [刘宇宁直播](https://s.weibo.com//weibo?q=%23%E5%88%98%E5%AE%87%E5%AE%81%E7%9B%B4%E6%92%AD%23&Refer=top) 243963
 29. [北京至成都一航班挂出7700紧急代码](https://s.weibo.com//weibo?q=%23%E5%8C%97%E4%BA%AC%E8%87%B3%E6%88%90%E9%83%BD%E4%B8%80%E8%88%AA%E7%8F%AD%E6%8C%82%E5%87%BA7700%E7%B4%A7%E6%80%A5%E4%BB%A3%E7%A0%81%23&Refer=top) 199538
 30. [两猫被困只有一只活了下来](https://s.weibo.com//weibo?q=%E4%B8%A4%E7%8C%AB%E8%A2%AB%E5%9B%B0%E5%8F%AA%E6%9C%89%E4%B8%80%E5%8F%AA%E6%B4%BB%E4%BA%86%E4%B8%8B%E6%9D%A5&Refer=top) 188737
 31. [父母省钱的方式有多绝](https://s.weibo.com//weibo?q=%23%E7%88%B6%E6%AF%8D%E7%9C%81%E9%92%B1%E7%9A%84%E6%96%B9%E5%BC%8F%E6%9C%89%E5%A4%9A%E7%BB%9D%23&Refer=top) 182839
@@ -41,3 +41,4 @@
 41. [OMG BLG](https://s.weibo.com//weibo?q=OMG%20BLG&Refer=top) 131388
 42. [圆满](https://s.weibo.com//weibo?q=%E5%9C%86%E6%BB%A1&Refer=top) 129961
 43. [能不能请余华和莫言说脱口秀](https://s.weibo.com//weibo?q=%23%E8%83%BD%E4%B8%8D%E8%83%BD%E8%AF%B7%E4%BD%99%E5%8D%8E%E5%92%8C%E8%8E%AB%E8%A8%80%E8%AF%B4%E8%84%B1%E5%8F%A3%E7%A7%80%23&Refer=top) 124855
+44. [医院官微赞扬英国相关责任人停职](https://s.weibo.com//weibo?q=%23%E5%8C%BB%E9%99%A2%E5%AE%98%E5%BE%AE%E8%B5%9E%E6%89%AC%E8%8B%B1%E5%9B%BD%E7%9B%B8%E5%85%B3%E8%B4%A3%E4%BB%BB%E4%BA%BA%E5%81%9C%E8%81%8C%23&Refer=top) 111790
