--- a/result/2022-01-21.md
+++ b/result/2022-01-21.md
@@ -45,6 +45,7 @@
 45. [OMG BLG](https://s.weibo.com//weibo?q=OMG%20BLG&Refer=top) 131388
 46. [圆满](https://s.weibo.com//weibo?q=%E5%9C%86%E6%BB%A1&Refer=top) 129961
 47. [能不能请余华和莫言说脱口秀](https://s.weibo.com//weibo?q=%23%E8%83%BD%E4%B8%8D%E8%83%BD%E8%AF%B7%E4%BD%99%E5%8D%8E%E5%92%8C%E8%8E%AB%E8%A8%80%E8%AF%B4%E8%84%B1%E5%8F%A3%E7%A7%80%23&Refer=top) 124855
-48. [西安三桥](https://s.weibo.com//weibo?q=%E8%A5%BF%E5%AE%89%E4%B8%89%E6%A1%A5&Refer=top) 96676
+48. [西安三桥](https://s.weibo.com//weibo?q=%E8%A5%BF%E5%AE%89%E4%B8%89%E6%A1%A5&Refer=top) 97051
 49. [王者荣耀](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E8%80%85%E8%8D%A3%E8%80%80%23&Refer=top) 76561
-50. [四川哪个地方的面最好吃](https://s.weibo.com//weibo?q=%23%E5%9B%9B%E5%B7%9D%E5%93%AA%E4%B8%AA%E5%9C%B0%E6%96%B9%E7%9A%84%E9%9D%A2%E6%9C%80%E5%A5%BD%E5%90%83%23&Refer=top) 30647
+50. [四川哪个地方的面最好吃](https://s.weibo.com//weibo?q=%23%E5%9B%9B%E5%B7%9D%E5%93%AA%E4%B8%AA%E5%9C%B0%E6%96%B9%E7%9A%84%E9%9D%A2%E6%9C%80%E5%A5%BD%E5%90%83%23&Refer=top) 36576
+51. [国防部回应美舰擅闯西沙领海](https://s.weibo.com//weibo?q=%23%E5%9B%BD%E9%98%B2%E9%83%A8%E5%9B%9E%E5%BA%94%E7%BE%8E%E8%88%B0%E6%93%85%E9%97%AF%E8%A5%BF%E6%B2%99%E9%A2%86%E6%B5%B7%23&Refer=top) 22414
