--- a/result/2022-01-21.md
+++ b/result/2022-01-21.md
@@ -36,7 +36,7 @@
 36. [奇妙夜](https://s.weibo.com//weibo?q=%E5%A5%87%E5%A6%99%E5%A4%9C&Refer=top) 178120
 37. [马龙正手](https://s.weibo.com//weibo?q=%E9%A9%AC%E9%BE%99%E6%AD%A3%E6%89%8B&Refer=top) 169439
 38. [大寒](https://s.weibo.com//weibo?q=%E5%A4%A7%E5%AF%92&Refer=top) 161969
-39. [警方介入父亲用皮带抽打小孩事件](https://s.weibo.com//weibo?q=%23%E8%AD%A6%E6%96%B9%E4%BB%8B%E5%85%A5%E7%88%B6%E4%BA%B2%E7%94%A8%E7%9A%AE%E5%B8%A6%E6%8A%BD%E6%89%93%E5%B0%8F%E5%AD%A9%E4%BA%8B%E4%BB%B6%23&Refer=top) 158246
+39. [警方介入父亲用皮带抽打小孩事件](https://s.weibo.com//weibo?q=%23%E8%AD%A6%E6%96%B9%E4%BB%8B%E5%85%A5%E7%88%B6%E4%BA%B2%E7%94%A8%E7%9A%AE%E5%B8%A6%E6%8A%BD%E6%89%93%E5%B0%8F%E5%AD%A9%E4%BA%8B%E4%BB%B6%23&Refer=top) 159656
 40. [交友软件有多离谱](https://s.weibo.com//weibo?q=%23%E4%BA%A4%E5%8F%8B%E8%BD%AF%E4%BB%B6%E6%9C%89%E5%A4%9A%E7%A6%BB%E8%B0%B1%23&Refer=top) 150683
 41. [骚白](https://s.weibo.com//weibo?q=%E9%AA%9A%E7%99%BD&Refer=top) 146721
 42. [热爱竞新春](https://s.weibo.com//weibo?q=%E7%83%AD%E7%88%B1%E7%AB%9E%E6%96%B0%E6%98%A5&Refer=top) 142985
@@ -45,8 +45,10 @@
 45. [OMG BLG](https://s.weibo.com//weibo?q=OMG%20BLG&Refer=top) 131388
 46. [圆满](https://s.weibo.com//weibo?q=%E5%9C%86%E6%BB%A1&Refer=top) 129961
 47. [能不能请余华和莫言说脱口秀](https://s.weibo.com//weibo?q=%23%E8%83%BD%E4%B8%8D%E8%83%BD%E8%AF%B7%E4%BD%99%E5%8D%8E%E5%92%8C%E8%8E%AB%E8%A8%80%E8%AF%B4%E8%84%B1%E5%8F%A3%E7%A7%80%23&Refer=top) 124855
-48. [西安三桥](https://s.weibo.com//weibo?q=%E8%A5%BF%E5%AE%89%E4%B8%89%E6%A1%A5&Refer=top) 107363
-49. [王者荣耀](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E8%80%85%E8%8D%A3%E8%80%80%23&Refer=top) 76561
-50. [国防部回应美舰擅闯西沙领海](https://s.weibo.com//weibo?q=%23%E5%9B%BD%E9%98%B2%E9%83%A8%E5%9B%9E%E5%BA%94%E7%BE%8E%E8%88%B0%E6%93%85%E9%97%AF%E8%A5%BF%E6%B2%99%E9%A2%86%E6%B5%B7%23&Refer=top) 75305
-51. [四川哪个地方的面最好吃](https://s.weibo.com//weibo?q=%23%E5%9B%9B%E5%B7%9D%E5%93%AA%E4%B8%AA%E5%9C%B0%E6%96%B9%E7%9A%84%E9%9D%A2%E6%9C%80%E5%A5%BD%E5%90%83%23&Refer=top) 47972
-52. [全国首个GDP超12万亿省份](https://s.weibo.com//weibo?q=%23%E5%85%A8%E5%9B%BD%E9%A6%96%E4%B8%AAGDP%E8%B6%8512%E4%B8%87%E4%BA%BF%E7%9C%81%E4%BB%BD%23&Refer=top) 34345
+48. [西安三桥](https://s.weibo.com//weibo?q=%E8%A5%BF%E5%AE%89%E4%B8%89%E6%A1%A5&Refer=top) 117860
+49. [国防部回应美舰擅闯西沙领海](https://s.weibo.com//weibo?q=%23%E5%9B%BD%E9%98%B2%E9%83%A8%E5%9B%9E%E5%BA%94%E7%BE%8E%E8%88%B0%E6%93%85%E9%97%AF%E8%A5%BF%E6%B2%99%E9%A2%86%E6%B5%B7%23&Refer=top) 93662
+50. [王者荣耀](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E8%80%85%E8%8D%A3%E8%80%80%23&Refer=top) 76561
+51. [四川哪个地方的面最好吃](https://s.weibo.com//weibo?q=%23%E5%9B%9B%E5%B7%9D%E5%93%AA%E4%B8%AA%E5%9C%B0%E6%96%B9%E7%9A%84%E9%9D%A2%E6%9C%80%E5%A5%BD%E5%90%83%23&Refer=top) 57275
+52. [全国首个GDP超12万亿省份](https://s.weibo.com//weibo?q=%23%E5%85%A8%E5%9B%BD%E9%A6%96%E4%B8%AAGDP%E8%B6%8512%E4%B8%87%E4%BA%BF%E7%9C%81%E4%BB%BD%23&Refer=top) 52206
+53. [员工称虎景房与动物园同一老板](https://s.weibo.com//weibo?q=%23%E5%91%98%E5%B7%A5%E7%A7%B0%E8%99%8E%E6%99%AF%E6%88%BF%E4%B8%8E%E5%8A%A8%E7%89%A9%E5%9B%AD%E5%90%8C%E4%B8%80%E8%80%81%E6%9D%BF%23&Refer=top) 35403
+54. [沉浸式洗地毯有多舒服](https://s.weibo.com//weibo?q=%23%E6%B2%89%E6%B5%B8%E5%BC%8F%E6%B4%97%E5%9C%B0%E6%AF%AF%E6%9C%89%E5%A4%9A%E8%88%92%E6%9C%8D%23&Refer=top) 30474
